--- a/src/hooks/email_template.html
+++ b/src/hooks/email_template.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Email Template</title>
+        <img src="image.png" alt="Pickup! App Logo">
         <style>
             /* Center the content horizontally and vertically */
             body {
